added closing doors
I hate this i hate this so so much like whyy tf this took so much time like hell na i never wanna do this sheet again.

--- a/style.css
+++ b/style.css
@@ -239,3 +239,8 @@ body {
     z-index: 1000;
     font-family: "ninja";
 }
+#main{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+}
