--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     height: 100%;
     justify-content: center;
     opacity: 1;
+    top: 0;
 }
 #heading{
     position: absolute;
@@ -76,21 +77,6 @@ body {
     top:40%;
     opacity: 1;
 }
-/* .ring{
-    position: relative;
-    width: 80px;
-    height: 80px;
-    top: 0; 
-    left: 0;     
-    border-radius: 50%;
-    outline: white;
-    outline-width: 5px;
-    outline-style: solid;
-    transition: 0.5s;
-    box-shadow: 0 0 8px white, inset 0 0 8px white;
-    -webkit-animation: pulse 2s linear 1s infinite;
-} */
-
 .ring{
     position: relative;
     width: 80px;
@@ -112,11 +98,6 @@ body {
 #spear:hover,
 #shield:hover {
     .ring{
-        /* width: 110px;
-        height: 110px;
-        top: -15px; 
-        left: -15px;  */
-        /* transition: 1s; */
         transform: scale(1.3);
         -webkit-animation: none;
         opacity: 1;
@@ -195,7 +176,7 @@ body {
     }
   }
 
-  @-webkit-keyframes rotate {
+@-webkit-keyframes rotate {
     0% {
         transform: rotate(0deg);
     }
@@ -229,18 +210,30 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    /* background-color: red; */
     color: black;
     text-align: center;
-    /* justify-content: center; */
     align-content: center;
     transform: scale(0);
     opacity: 0;
     z-index: 1000;
     font-family: "ninja";
+    top: 0;
 }
-#main{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
+.slideshow {
+    position: relative;
+    width: 100vw; /* Match the width of your images */
+    height: 100vh; /* Match the height of your images */
+    text-align: center;
+    align-content: center;
+    overflow: hidden;
+}
+
+.slideshow img {
+    width: 100%;
+    height: auto;
+    display: none; /* Hide all images by default */
+    position: relative;
+}
+.active {
+    display: block !important; /* Show the active image */
 }
